--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "homepage": "https://github.com/Klustre/cavalry-types#readme",
   "devDependencies": {
     "np": "^7.6.2",
-    "prettier": "^2.8.1",
-    "typescript": "^4.9.4"
+    "prettier": "^2.8.1"
   }
 }
