--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "cavalry-types",
-  "version": "0.0.1",
-  "description": "Typescript definitions for Cavalry",
-  "main": "index.d.ts",
-  "scripts": {
-    "release": "npx np",
-    "bundle": "npx tsc src/index.ts --declaration --emitDeclarationOnly --outDir .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Klustre/cavalry-types.git"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Klustre/cavalry-types/issues"
-  },
-  "homepage": "https://github.com/Klustre/cavalry-types#readme",
-  "devDependencies": {
-    "np": "^7.6.2",
-    "prettier": "^2.8.1"
-  }
+	"name": "cavalry-types",
+	"version": "0.0.1",
+	"description": "Typescript definitions for Cavalry",
+	"main": "index.d.ts",
+	"types": "index.d.ts",
+	"scripts": {
+		"release": "npx np",
+		"bundle": "npx tsc src/index.ts --declaration --emitDeclarationOnly --outDir .",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Klustre/cavalry-types.git"
+	},
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/Klustre/cavalry-types/issues"
+	},
+	"homepage": "https://github.com/Klustre/cavalry-types#readme",
+	"devDependencies": {
+		"np": "^7.6.2",
+		"prettier": "^2.8.1"
+	}
 }
