--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
 		"allowJs": true,
 		"checkJs": true,
 		"strict": true,
-		"noEmit": true
+		"noEmit": true,
+		"moduleResolution": "nodenext",
+		"moduleDetection": "auto"
 	}
 }
