--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@scenery/cavalry-types",
-	"version": "0.2.1",
+	"version": "0.2.2",
 	"description": "Typescript definitions for Cavalry",
 	"main": "index.d.ts",
 	"types": "index.d.ts",
@@ -10,7 +10,7 @@
 		"test": "echo \"No test specified\""
 	},
 	"files": [
-		"types/**",
+		"versions/**",
 		"render.d.ts",
 		"ctx.d.ts"
 	],
